--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/init.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://unpkg.com/@mdi/font@6.x/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
@@ -32,11 +34,11 @@
 <body>
     <div id="section1">
         <canvas></canvas>
-        <h1 id="title">Tenarse</h1>
+        <div id="title">Tenarse</div>
         <div class="img-logo"><img src="signin/Logo_app_oscuro.png" alt=""></div>
         <div class="scroll">SCROLL DOWN</div>
-        <div class="flecha">🡫</div>
-
+        <div class="flecha"><i class="fa fa-arrow-down" aria-hidden="true"></i>
+        </div>
     </div>
     <v-app id="app">
         <div id="container">
@@ -145,7 +147,7 @@
             canvas.width = container.offsetWidth;
             canvas.height = container.offsetHeight;
             renderer.setSize(container.offsetWidth, container.offsetHeight);
-            document.body.style.touchAction = 'none';
+            document.body.style.touchAction = 'auto';
             document.body.addEventListener('pointermove', mouseMove);
             window.addEventListener("keydown", onKeyDown);
 
@@ -165,11 +167,11 @@
 
 
         function windowRes() {
-            windowHalfX = window.innerWidth / 2;
-            windowHalfY = window.innerHeight / 2;
-            camera.aspect = window.innerWidth / window.innerHeight;
+            windowHalfX = container.offsetWidth / 2;
+            windowHalfY = container.offsetHeight / 2;
+            camera.aspect = container.offsetWidth / container.offsetHeight;
             camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.setSize(container.offsetWidth, container.offsetHeight);
         }
 
         function mouseMove(event) {
