--- a/client/signin/index.html
+++ b/client/signin/index.html
@@ -22,12 +22,15 @@
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <title>Project</title>
+
 </head>
 
 <body>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <v-app id="app">
-    <v-container class="container-flex" style="display: flex; flex-wrap: nowrap;" fill-height>
-            <div class="img-logo" style="width: 100%; text-align: right;"><img class="img-logo-img" src="logo_app_claro.png" alt=""></div>
+        <v-container class="container-flex" style="display: flex; flex-wrap: nowrap;" fill-height>
+            <div class="img-logo" style="width: 100%; text-align: right;"><img class="img-logo-img"
+                    src="logo_app_claro.png" alt=""></div>
             <v-row justify="start" align-items="start">
                 <div class="col-before" style="width: 60%;">
                     <v-card-text>
@@ -44,23 +47,28 @@
                         <div style="text-align: center;">
                             <p>Don't have an account? <a class="sign-up" href="">Sign Up</a></p>
                         </div>
-                        
+
                         <div class="span-div">
                             <span class="hr-span">OR</span>
                         </div>
                         <br>
-                        <button class="btn-google" style="width: 100%; height: 50px; border: 1px solid grey;">
-                            <div style="display: flex; align-items: center;">
-                                <img style="margin-left: 10px;" src="google-logo.png" alt="">
-                                <div style="width: 100%;"><span style="font-weight: 500; font-size: 17px; margin-left: 0px;">Continue with Google</span></div>
-                            </div>
-                        </button>
-                    </v-card-text>
+                        <div id="g_id_onload" data-client_id="473605537300-nf5611uhudkvb5qe7as91131c4fsgvcf"
+                            data-context="signin" data-ux_mode="popup" data-callback="callback"
+                            data-auto_prompt="false">
+                        </div>
+
+                        <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="outline"
+                            data-text="continue_with" data-size="large" data-logo_alignment="left">
+                        </div>
+
+
+                </div>
+                </v-card-text>
                 </div>
             </v-row>
         </v-container>
     </v-app>
-</body>
+></body>
 <script src="./index.js"></script>
 
 </html>
