--- a/client/signin/index.html
+++ b/client/signin/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/platform.js"></script>
     <v-app id="app">
         <v-container class="container-flex" style="display: flex; flex-wrap: nowrap;" fill-height>
             <div class="img-logo" style="width: 100%; text-align: right;"><img class="img-logo-img"
@@ -52,14 +52,8 @@
                             <span class="hr-span">OR</span>
                         </div>
                         <br>
-                        <div id="g_id_onload" data-client_id="473605537300-nf5611uhudkvb5qe7as91131c4fsgvcf"
-                            data-context="signin" data-ux_mode="popup" data-callback="callback"
-                            data-auto_prompt="false">
-                        </div>
+                        <div class="g-signin2" data-onsuccess="onSignIn"  data-client_id="473605537300-nf5611uhudkvb5qe7as91131c4fsgvcf.apps.googleusercontent.com"></div>
 
-                        <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="outline"
-                            data-text="continue_with" data-size="large" data-logo_alignment="left">
-                        </div>
 
 
                 </div>
@@ -68,6 +62,18 @@
             </v-row>
         </v-container>
     </v-app>
+    <script>
+        function onSignIn(googleUser) {
+          // Get the user's ID token and other data
+          var id_token = googleUser.getAuthResponse().id_token;
+          var profile = googleUser.getBasicProfile();
+          var name = profile.getName();
+          var email = profile.getEmail();
+          
+          // Send the ID token to your server for authentication
+          // ...
+        }
+        </script>
 ></body>
 <script src="./index.js"></script>
 
