--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/init.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/section2.css">
+    <link rel="stylesheet" href="css/section3.css">
+
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://unpkg.com/@mdi/font@6.x/css/materialdesignicons.min.css">
@@ -28,7 +30,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+                "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+            }
+        }
+    </script>
 
     <title>Project</title>
 </head>
@@ -45,11 +54,31 @@
     <v-app id="app">
         <div id="container">
             <div class="section" id="section2">
-                <div class="parent">
-                    <div class="title-join">Join Now</div>
+                <canvas></canvas>
+                <div class="wrapp">
+                    <div id="typ" class="typ">Join Now</div>
+                </div>
+                <div class="btn-start">
+                    <a id="link-start" class="link-start">START</a>
                 </div>
             </div>
-            <div class="section">Section 3</div>
+            <div class="section" id="section3">
+                <canvas></canvas>
+                <div class="all">
+                    <div class="title3">What Is Tenarse?</div>
+                    <div class="text3">Our project aims to contribute to the programmers' world with a social network through a mobile
+                        app and a webpage. Moreover, with this social network, we want to encourage the interest of
+                        programmers to learn and share knowledge, therefore, enhance their passion and skills in this
+                        area. <br><br> We are also building this platform to make companies aware of the skills that programmers
+                        demonstrate on our social network before hiring them. In this report, you can see the
+                        development and creation plan step by step of TENARSE.
+                    </div>
+                </div>
+                <div class="final">
+                    <div class="click">Click And Move me</div>
+                    <div class="scroll-right">Scroll Down <i class="fa fa-arrow-right" id="icon-right" aria-hidden="true"></i></div>
+                </div>
+            </div>
             <div class="section">Section 3</div>
         </div>
         <div class="firstCo">
@@ -102,113 +131,49 @@
             </v-col></v-footer>
 
     </v-app>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.135.0/build/three.min.js"></script>
 
-    <script>
-        let camera, scene, renderer, material, mouseX = 0, mouseY = 0, windowHalfX = window.innerWidth / 2, windowHalfY = window.innerHeight / 2;
-
-        init();
-        animate();
-
-        function init() {
-            camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 5, 2000);
-
-            camera.position.z = 1000;
-
-            scene = new THREE.Scene();
-            scene.fog = null;
-
-            const geometry = new THREE.BufferGeometry();
-            const vrtx = [];
-            const size = 2000;
-
-            for (let i = 0; i < 10000; i++) {
-                const x = (Math.random() * size + Math.random() * size) / 2 - size / 2;
-                const y = (Math.random() * size + Math.random() * size) / 2 - size / 2;
-                const z = (Math.random() * size + Math.random() * size) / 2 - size / 2;
-
-                vrtx.push(x, y, z);
-            }
-
-            geometry.setAttribute('position', new THREE.Float32BufferAttribute(vrtx, 3));
-
-            material = new THREE.PointsMaterial({
-                size: 2,
-                color: 0xffffff,
-                shading: THREE.FlatShading,
-            });
-
-            const particles = new THREE.Points(geometry, material);
-            scene.add(particles);
-
-
-
-
-            const container = document.getElementById('section1');
-            container.width = "100%";
-            var texture = new THREE.Texture(container);
-            texture.needsUpdate = true;
-            var geometry2 = new THREE.PlaneGeometry(200, 200);
-            var material2 = new THREE.MeshBasicMaterial({ map: texture });
-            var mesh = new THREE.Mesh(geometry, material);
-            var light = new THREE.PointLight(0xffff00, 1, 100);
-            light.position.set(0, 0, 0);
-            mesh.add(light);
-
-            const canvas = container.querySelector('canvas');
-            renderer = new THREE.WebGLRenderer({ canvas });
-
-            renderer.setPixelRatio(window.devicePixelRatio);
-            canvas.width = container.offsetWidth;
-            canvas.height = container.offsetHeight;
-            renderer.setSize(container.offsetWidth, container.offsetHeight);
-            document.body.style.touchAction = 'auto';
-            document.body.addEventListener('pointermove', mouseMove);
-            window.addEventListener("keydown", onKeyDown);
-
-            window.addEventListener('resize', windowRes);
-        }
-
-
-        function onKeyDown(event) {
-            if (event.key === "s" || event.key === "S") {
-                camera.position.z -= 10;
-            }
-            if (event.key === "w" || event.key === "W") {
-                camera.position.z += 10;
-            }
-        }
-
-
-
-        function windowRes() {
-            windowHalfX = container.offsetWidth / 2;
-            windowHalfY = container.offsetHeight / 2;
-            camera.aspect = container.offsetWidth / container.offsetHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(container.offsetWidth, container.offsetHeight);
-        }
-
-        function mouseMove(event) {
-            mouseX = event.clientX - windowHalfX;
-            mouseY = event.clientY - windowHalfY;
-        }
-
-        function animate() {
-            requestAnimationFrame(animate);
-            render();
-        }
-
-        function render() {
-            camera.position.x += (mouseX * 2 - camera.position.x) * 0.02;
-            camera.position.y += (-mouseY * 2 - camera.position.y) * 0.02;
-            camera.lookAt(scene.position);
-            renderer.render(scene, camera);
-            scene.rotation.x += 0.001;
-            scene.rotation.y += 0.002;
-        }
-    </script>
+    <script type="module" src="./index1.js"></script>
+    <script type="module" src="./index2.js"></script>
+    <script type="module" src="./index3.js"></script>
     <script src="js/about.js"></script>
+    <script type="module">
+        import { animate2 } from './index2.js';
+        import { init } from './index2.js';
+
+        document.addEventListener('scroll', function () {
+            var div2 = document.getElementById('typ');
+
+            if (window.pageYOffset > 500 && window.pageYOffset < 1600) {
+                div2.classList.add("animate");
+            }
+            else {
+                div2.classList.remove("animate")
+            }
+        });
+
+        var link = document.getElementById('link-start');
+        var counter = 0;
+        link.addEventListener('click', function () {
+            counter++;
+            if (counter == 1) {
+                init();
+                animate2(30);
+            }
+        
+            setTimeout(function () {
+                window.open("./signin/index.html", "_blank");
+                if (window.innerWidth < 450) {
+                    window.scrollTo(0, 900);
+                }
+                else {
+                    window.scrollTo(0, 1600);
+                }
+
+            }, 3000);
+        });
+
+
+    </script>
     <script>
         gsap.registerPlugin(ScrollTrigger);
         const sections = gsap.utils.toArray('.section');
