--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/signup/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://unpkg.com/@mdi/font@6.x/css/materialdesignicons.min.css">
@@ -31,20 +31,20 @@
     <v-app id="app">
         <v-container class="container-flex" style="display: flex; flex-wrap: nowrap;" fill-height>
             <div class="img-logo" style="width: 100%; text-align: right;"><img class="img-logo-img"
-                    src="logo_app_claro.png" alt=""></div>
+                    src="/signup/logo_app_claro.png" alt=""></div>
             <v-row justify="start" align-items="start">
                 <div class="col-before" style="width: 60%;">
                     <v-card-text>
                         <v-card-title
                             style="margin-top: 30px; font-size: 3rem;  text-align: center; font-weight: bold; color: #575454; font-family: 'Bebas Neue'; ">
                             WELCOME TO TENARSE</v-card-title>
-                        <v-text-field id="name" v-model="email" color="#575454" style="margin-top: 0px;" outlined
+                        <v-text-field id="name" v-model="name" color="#575454" style="margin-top: 0px;" outlined
                             label="Name" append-icon="mdi-account">
                         </v-text-field>
-                        <v-text-field id="surname" v-model="email" color="#575454" style="margin-top: 0px;" outlined
+                        <v-text-field id="surname" v-model="surname" color="#575454" style="margin-top: 0px;" outlined
                         label="Surname" append-icon="mdi-account">
                         </v-text-field>
-                        <v-text-field id="surname" v-model="email" color="#575454" style="margin-top: 0px;" outlined
+                        <v-text-field id="surname" v-model="username" color="#575454" style="margin-top: 0px;" outlined
                         label="Username" append-icon="mdi-account-circle">
                         </v-text-field>
                         <v-text-field id="email" v-model="email" color="#575454" style="margin-top: 0px;" outlined
@@ -60,10 +60,13 @@
                         :append-icon="showPassword ? 'mdi-eye' : 'mdi-eye-off'"
                         @click:append="showPassword = !showPassword">
                         </v-text-field>
-                        <button class="btn-sign" style="width: 100%; height: 50px; border: 1px solid grey;">
+                        <button @click="register(name, surname, username, email, pass, confirm_pass)" class="btn-sign" style="width: 100%; height: 50px; border: 1px solid grey;">
                             <span style="font-weight: 500; font-size: 17px;">Sign Up</span>
                         </button>
                         <br><br>
+                        <div style="text-align: center;">
+                            <p>You have an account? <a class="sign-up" href="http://localhost:4000/sign">Sign In</a></p>
+                        </div>
                 </div>
                 </v-card-text>
                 </div>
@@ -71,6 +74,6 @@
         </v-container>
     </v-app>
 </body>
-<script src="./index.js"></script>
+<script src="/signup/index.js"></script>
 
 </html>
