--- a/client/index.html
+++ b/client/index.html
@@ -101,7 +101,9 @@
                 </div>
             </div>
         </div>
-        <div class="firstCo">
+        <div class="firstCo" id="section5">
+            <canvas></canvas>
+                <div class="title5">About Us</div>
         </div>
 
     </v-app>
@@ -109,6 +111,8 @@
     <script type="module" src="./index2.js"></script>
     <script type="module" src="./index3.js"></script>
     <script type="module" src="./index4.js"></script>
+    <script type="module" src="./index5.js"></script>
+
     <script src="./client.js"></script>
     <script>
         console.log('Index.html loaded!');
