--- a/client/signin/index.html
+++ b/client/signin/index.html
@@ -51,7 +51,7 @@
                         :append-icon="showPassword ? 'mdi-eye' : 'mdi-eye-off'"
                         @click:append="showPassword = !showPassword">
                     </v-text-field>
-                        <button class="btn-sign" style="width: 100%; height: 50px; border: 1px solid grey;">
+                        <button class="btn-sign" @click="verify_login(email, pass)" style="width: 100%; height: 50px; border: 1px solid grey;">
                             <span style="font-weight: 500; font-size: 17px;">Sign In</span>
                         </button>
                         <br><br>
