--- a/client/myprofile/index.html
+++ b/client/myprofile/index.html
@@ -34,6 +34,7 @@
     <v-app id="app">
         <div style="height: 100vh; width: 100%;">
             <v-container fluid class="container-flex" fill-height dense>
+                <h1>MYPROFILE</h1>
                 <v-row style=" height: 25%;" no-gutters>
                     <v-col cols="12">
                         <div
@@ -57,8 +58,9 @@
                                 <div style="font-weight: bold; font-family: 'Bebas Neue'; font-size: 3em;">
                                     {{lenFollowers}}</div>
                                 <h2 style="font-weight: bold; font-family: 'Bebas Neue';font-size: 1.4em;">Followers
-
                                 </h2>
+
+
                             </div>
                         </v-col>
                         <v-col cols="6" offset-sm-3>
@@ -102,6 +104,6 @@
 
     </v-app>
 </body>
-<script src="/profile/index.js"></script>
+<script src="/myprofile/index.js"></script>
 
 </html>
