--- a/client/myprofile/index.html
+++ b/client/myprofile/index.html
@@ -34,7 +34,7 @@
     <v-app id="app">
         <div style="height: 100vh; width: 100%;">
             <v-container fluid class="container-flex" fill-height dense>
-                <h1>MYPROFILE</h1>
+                <button style="margin-left: 10px;" @click="goBack()"><v-icon class="left-arrow" style="font-size: 45px;">mdi-arrow-left</v-icon></button>
                 <v-row style=" height: 25%;" no-gutters>
                     <v-col cols="12">
                         <div
