--- a/client/profile/index.html
+++ b/client/profile/index.html
@@ -33,8 +33,8 @@
 <body>
     <v-app id="app">
         <div style="height: 100vh; width: 100%;">
-            <v-container fluid class="container-flex" fill-height dense>
-                <button style="margin-left: 10px;" @click="goBack()"><v-icon class="left-arrow" style="font-size: 45px;">mdi-arrow-left</v-icon></button>
+            <v-container fluid class="container-flex" style="flex-direction: column; flex-wrap: unset; align-items: unset;" fill-height dense>
+                <button style="margin-left: 10px; position: absolute;" @click="goBack()"><v-icon class="left-arrow" style="font-size: 45px;">mdi-arrow-left</v-icon></button>
 
                 <v-row style=" height: 25%;" no-gutters>
                     <v-col cols="12">
@@ -48,10 +48,18 @@
                                 {{perfil.username}}
                             </div>
                         </div>
+                        <div style="display: flex; justify-content: center; align-items: center; margin-top: -40px;">
+                            {{perfil.nombre}} {{perfil.apellidos}}
+                        </div>
+                        <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px ;">
+                            <v-btn style="margin: 0 100px; box-shadow: none !important; background-color: transparent;">FOLLOW</v-btn>
+                            <v-btn style="margin: 0 100px; box-shadow: none !important; background-color: transparent;">SEND MESSAGE</v-btn>
+                        </div>
+
                     </v-col>
                 </v-row>
 
-                <v-row justify="center">
+                <v-row justify="center" style="margin-top: -20px;">
                     <v-row style="max-width: 50%;" dense>
                         <v-col cols="6" offset-sm-3>
                             <div
@@ -75,7 +83,7 @@
                     </v-row>
                 </v-row>
 
-                <v-row justify="center">
+                <v-row justify="center" style="margin-top: -30px;">
                     <div class="scrollable" style="max-height: 400px; width: 75%; display: flex; justify-content: center;">
                         
                         <v-row style=" max-width: 75%; display: flex; flex-wrap: wrap;" dense>
