--- a/client/publi/index.html
+++ b/client/publi/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/publi/style.css">
-    <link rel="stylesheet" href="/client/css/media.css">
+    <link rel="stylesheet" href="/css/media.css">
     
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.js"></script>
@@ -32,16 +32,22 @@
 
 <body>
     <v-app id="app">
-        <ul class="ul-parent">
+        <ul class="ul-parent2">
+            <button id="menu-toggle3" style="margin-top: 10px;
+            margin-left: 10px;
+            position: absolute;
+            left: 0; display: none;" ><v-icon class="left-arrow" style="font-size: 45px;">mdi-arrow-left</v-icon></button>
             <h1 style="margin-top: 40px; font-size: 50px; font-weight: bold; font-family: 'Bebas Neue';">Comments</h1>
             <h4 style="font-size: 19px; font-weight: bold; font-family: 'Bebas Neue';">Num:{{publicacion_length}}</h4>
             <v-divider style="width: 80%; margin-top: 15px;"></v-divider>
-            <li style="margin-top: 20px;" v-for="comentari in publicacion.comentaris">
+            <div class="scrollable-comments">
+            <li style="margin-top: 20px; width: 100%;" v-for="comentari in publicacion.comentaris">
                 <v-avatar style="height: 30px; width: 30px;" class="avatar">
                     <img :src="comentari.user_img"  referrerpolicy="no-referrer"></v-img>
                 </v-avatar>
                  <div><b>{{comentari.user}}</b>:</div> <div> {{comentari.coment_text}}</div>
             </li>
+        </div>
             <div  v-if="perfil != null" style="position: absolute; bottom: 1%; width: 80%;" class="add-comment">
                 <v-divider style="width: 100%; margin-bottom: 15px;"></v-divider>
                 <v-text-field v-model="comment" label="Add a comment"></v-text-field>
@@ -63,27 +69,27 @@
         </ul>
         <div style="height: 100vh; width: 100%;">
             <v-container fluid class="container-flex" style="flex-direction: column;  flex-wrap: unset; align-items: center; justify-content: center;" fill-height dense>
-                <div style="width: 65%;  display: flex; flex-direction: column;">
-                        <div class="header-card" style="display: flex; flex-direction: row;">
+                <div class="parent-card-new" style="width: 65%;  display: flex; flex-direction: column;">
+                        <div class="header-card-2" style="display: flex; flex-direction: row;">
                             <v-avatar style="    height: 48px;
                             min-width: 48px;
                             width: 48px;
-                        " class="avatar">
+                        " class="avatar-2">
                                 <img :src="publicacion.user_img"  referrerpolicy="no-referrer"></v-img>
                             </v-avatar>
                             <div style="    display: flex;
                             align-items: center;
                             width: 13%; 
-                            justify-content: center;" class="name-header"><a  style="color: black; text-decoration: none;" @click="showPerfil(publicacion.owner)">{{publicacion.owner}}</a></div>
+                            justify-content: center;" class="name-header-2"><a  style="color: black; text-decoration: none;" @click="showPerfil(publicacion.owner)">{{publicacion.owner}}</a></div>
                             <div style="    display: flex; margin-top: 20px;
                             align-items: center;
                             width: 100%;
                             justify-content: flex-end;
                             margin-right: 25px;
-                        " class="share-header"><v-btn @click="tryShare()" value="share" style="box-shadow: none !important; background-color: transparent !important;"><v-icon>mdi-share</v-icon></v-btn></div>
+                        " class="share-header-2"><v-btn @click="tryShare()" value="share" style="box-shadow: none !important; background-color: transparent !important;"><v-icon>mdi-share</v-icon></v-btn></div>
                         </div>
                         <div style="margin-top: 10px;">{{publicacion.text}}</div>
-                        <div style="height: 575px; border-radius: 15px;  overflow: hidden;">
+                        <div class="img-cover-2" style="height: 575px; border-radius: 15px;  overflow: hidden;">
                             
                                 <img :src="'../'+ publicacion.url_img" style="border-radius: 6px;   width: 100%;
                                 height: 100%; 
@@ -102,8 +108,15 @@
                                 <p></p><v-icon>mdi-send</v-icon>
                             </v-btn>
                         </v-bottom-navigation>
-
                 </div>
+                <v-divider class="divider-end" style="width: 65%; margin-top: 25px;"></v-divider>
+                <h1 class="text-see-more-sign" v-if="perfil == null" style=" margin-top: 15px; text-align: center;font-size: 2.7em; font-weight: bold; color: #999999; font-family: 'Bebas Neue'; ">
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/sign/">Sign in</a> or 
+                    <a style="color: black !important; text-decoration: none;"href="http://localhost:4000/register/">Sign up</a>  to view more
+                </h1>
+                <a class="text-see-more" v-if="perfil != null" style=" margin-top: 15px; text-decoration: none; text-align: center;font-size: 2.7em; font-weight: bold; color: #999999; font-family: 'Bebas Neue';" href="http://localhost:4000/app">
+                    See More
+                </a>
             </v-container>
         </div>
     </v-app>
